--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "react": "^16.13.1",
+    "react-back-to-top-button": "0.0.14",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-scroll-button": "^1.1.2",
     "react-slick": "^0.26.1",
     "reactstrap": "^8.5.0",
     "slick-carousel": "^1.8.1"
