--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.13.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -17,6 +18,7 @@
     "react-scripts": "3.4.1",
     "react-scroll-button": "^1.1.2",
     "react-slick": "^0.26.1",
+    "react-use": "^15.3.0",
     "reactstrap": "^8.5.0",
     "slick-carousel": "^1.8.1"
   },
