--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
+    "react-parallax": "^3.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-scroll-button": "^1.1.2",
     "react-slick": "^0.26.1",
+    "react-transition-group": "^4.4.1",
     "react-use": "^15.3.0",
     "reactstrap": "^8.5.0",
     "slick-carousel": "^1.8.1"
