--- a/package.json
+++ b/package.json
@@ -1,54 +1,47 @@
 {
-  "name": "kels-pics",
-  "version": "0.1.0",
-  "engines": {
-    "node": "12.x"
-  },
-  "private": true,
-  "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.13.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "axios": "^0.19.2",
-    "bootstrap": "^4.5.0",
-    "react": "^16.13.1",
-    "react-back-to-top-button": "0.0.14",
-    "react-bootstrap": "^1.0.1",
-    "react-dom": "^16.13.1",
-    "react-icons": "^3.10.0",
-    "react-parallax": "^3.0.3",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
-    "react-scroll-button": "^1.1.2",
-    "react-slick": "^0.26.1",
-    "react-transition-group": "^4.4.1",
-    "react-use": "^15.3.0",
-    "reactstrap": "^8.5.0",
-    "slick-carousel": "^1.8.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "node-sass": "^4.14.1"
-  }
+	"name": "kels-pics",
+	"version": "0.1.0",
+	"engines": {
+		"node": "12.x"
+	},
+	"private": true,
+	"dependencies": {
+		"@fortawesome/fontawesome-free": "^5.13.1",
+		"@testing-library/jest-dom": "^4.2.4",
+		"@testing-library/react": "^9.3.2",
+		"@testing-library/user-event": "^7.1.2",
+		"axios": "^0.19.2",
+		"bootstrap": "^4.5.0",
+		"react": "^16.13.1",
+		"react-back-to-top-button": "0.0.14",
+		"react-bootstrap": "^1.0.1",
+		"react-dom": "^16.13.1",
+		"react-icons": "^3.10.0",
+		"react-parallax": "^3.0.3",
+		"react-router-dom": "^5.2.0",
+		"react-scripts": "3.4.1",
+		"react-scroll-button": "^1.1.2",
+		"react-slick": "^0.26.1",
+		"react-transition-group": "^4.4.1",
+		"react-use": "^15.3.0",
+		"reactstrap": "^8.5.0",
+		"slick-carousel": "^1.8.1"
+	},
+	"scripts": {
+		"start": "serve -s build",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm run build"
+	},
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"browserslist": {
+		"production": [ ">0.2%", "not dead", "not op_mini all" ],
+		"development": [ "last 1 chrome version", "last 1 firefox version", "last 1 safari version" ]
+	},
+	"devDependencies": {
+		"node-sass": "^4.14.1"
+	}
 }
